fix: harden presentation patches and market call logging